crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__scope__nop.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/reference/scope/nop.qasm
expect-lex: Ok
--- source ---

nop;
nop $0;
nop $1, $2;
nop q, q[0],;
box {
  nop $0;
}
gate x q {
  nop q;
}
--- lexer ---
ok: true
errors: 0
[0] Whitespace "\n" @0..1
[1] Ident "nop" @1..4
[2] Semi ";" @4..5
[3] Whitespace "\n" @5..6
[4] Ident "nop" @6..9
[5] Whitespace " " @9..10
[6] HardwareIdent "$0" @10..12
[7] Semi ";" @12..13
[8] Whitespace "\n" @13..14
[9] Ident "nop" @14..17
[10] Whitespace " " @17..18
[11] HardwareIdent "$1" @18..20
[12] Comma "," @20..21
[13] Whitespace " " @21..22
[14] HardwareIdent "$2" @22..24
[15] Semi ";" @24..25
[16] Whitespace "\n" @25..26
[17] Ident "nop" @26..29
[18] Whitespace " " @29..30
[19] Ident "q" @30..31
[20] Comma "," @31..32
[21] Whitespace " " @32..33
[22] Ident "q" @33..34
[23] OpenBracket "[" @34..35
[24] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "0" @35..36
[25] CloseBracket "]" @36..37
[26] Comma "," @37..38
[27] Semi ";" @38..39
[28] Whitespace "\n" @39..40
[29] Ident "box" @40..43
[30] Whitespace " " @43..44
[31] OpenBrace "{" @44..45
[32] Whitespace "\n  " @45..48
[33] Ident "nop" @48..51
[34] Whitespace " " @51..52
[35] HardwareIdent "$0" @52..54
[36] Semi ";" @54..55
[37] Whitespace "\n" @55..56
[38] CloseBrace "}" @56..57
[39] Whitespace "\n" @57..58
[40] Ident "gate" @58..62
[41] Whitespace " " @62..63
[42] Ident "x" @63..64
[43] Whitespace " " @64..65
[44] Ident "q" @65..66
[45] Whitespace " " @66..67
[46] OpenBrace "{" @67..68
[47] Whitespace "\n  " @68..71
[48] Ident "nop" @71..74
[49] Whitespace " " @74..75
[50] Ident "q" @75..76
[51] Semi ";" @76..77
[52] Whitespace "\n" @77..78
[53] CloseBrace "}" @78..79
[54] Whitespace "\n" @79..80
