crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__scope__nop.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/scope/nop.qasm
expect-parse: Todo
--- parser ---
ok: false
panicked: false
errors: 1
--- ast ---
SOURCE_FILE@0..120: // lex: ok
// parse: todo
// sema: skip

nop;
nop $0;
nop $1, $2;
nop q, q[0],;
box {
  nop $0;
}
gate x q {
  nop q;
}

EXPR_STMT@41..45: nop;
IDENTIFIER@41..44: nop
EXPR_STMT@46..53: nop $0;
GATE_CALL_EXPR@46..52: nop $0
IDENTIFIER@46..49: nop
QUBIT_LIST@50..52: $0
HARDWARE_QUBIT@50..52: $0
EXPR_STMT@54..65: nop $1, $2;
GATE_CALL_EXPR@54..64: nop $1, $2
IDENTIFIER@54..57: nop
QUBIT_LIST@58..64: $1, $2
HARDWARE_QUBIT@58..60: $1
HARDWARE_QUBIT@62..64: $2
EXPR_STMT@66..79: nop q, q[0],;
GATE_CALL_EXPR@66..78: nop q, q[0],
IDENTIFIER@66..69: nop
QUBIT_LIST@70..78: q, q[0],
IDENTIFIER@70..71: q
INDEXED_IDENTIFIER@73..77: q[0]
IDENTIFIER@73..74: q
INDEX_OPERATOR@74..77: [0]
EXPRESSION_LIST@75..76: 0
LITERAL@75..76: 0
EXPR_STMT@80..97: box {
  nop $0;
}
BOX_EXPR@80..97: box {
  nop $0;
}
BLOCK_EXPR@84..97: {
  nop $0;
}
EXPR_STMT@88..95: nop $0;
GATE_CALL_EXPR@88..94: nop $0
IDENTIFIER@88..91: nop
QUBIT_LIST@92..94: $0
HARDWARE_QUBIT@92..94: $0
GATE@98..119: gate x q {
  nop q;
}
NAME@103..104: x
PARAM_LIST@105..106: q
PARAM@105..106: q
BLOCK_EXPR@107..119: {
  nop q;
}
EXPR_STMT@111..117: nop q;
GATE_CALL_EXPR@111..116: nop q
IDENTIFIER@111..114: nop
QUBIT_LIST@115..116: q
IDENTIFIER@115..116: q
