crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__scope__nop.qasm-sema.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: sema_snap
---
id: tests/snippets/reference/scope/nop.qasm
expect-sema: Todo
--- sema ---
ok: true
panicked: false
errors: 0
--- asg ---
(no asg)
